@@ -1,5 +1,6 @@
 package com.example.ttcn2etest.service.permission;
 
+import com.example.ttcn2etest.exception.MyCustomException;
 import com.example.ttcn2etest.model.dto.PermissionDTO;
 import com.example.ttcn2etest.model.etity.Permission;
 import com.example.ttcn2etest.repository.permission.PermissionRepository;
@@ -13,10 +14,9 @@ import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-public class PermissionServiceImpl implements PermissionService{
+public class PermissionServiceImpl implements PermissionService {
     private final PermissionRepository permissionRepository;
     private final ModelMapper modelMapper = new ModelMapper();
 
@@ -28,22 +28,22 @@ public class PermissionServiceImpl implements PermissionService{
     public List<PermissionDTO> getAllPermission() {
         return permissionRepository.findAll().stream().map(
                 permission -> modelMapper.map(permission, PermissionDTO.class)
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     @Override
     public PermissionDTO getByIdPermission(String id) {
         Optional<Permission> permissionOptional = permissionRepository.findById(id);
-        if(permissionOptional.isPresent()){
+        if (permissionOptional.isPresent()) {
             return modelMapper.map(permissionOptional.get(), PermissionDTO.class);
-        }else {
-            throw new RuntimeException("Id không tồn tại trong hệ thống!");
+        } else {
+            throw new MyCustomException("Id không tồn tại trong hệ thống!");
         }
     }
 
     @Override
     public PermissionDTO createPermission(CreatePermissionRequest request) {
-        try{
+        try {
             Permission permission = Permission.builder()
                     .permissionId(request.getPermissionId())
                     .name(request.getName())
@@ -53,49 +53,49 @@ public class PermissionServiceImpl implements PermissionService{
                     .build();
             permission = permissionRepository.saveAndFlush(permission);
             return modelMapper.map(permission, PermissionDTO.class);
-        }catch (Exception ex){
-            throw new RuntimeException("Có lỗi xảy ra trong quá trình thêm mới!");
+        } catch (Exception ex) {
+            throw new MyCustomException("Có lỗi xảy ra trong quá trình thêm mới!");
         }
     }
 
     @Override
     public PermissionDTO updatePermission(UpdatePermissionRequest request, String id) {
         Optional<Permission> permissionOptional = permissionRepository.findById(id);
-        if(permissionOptional.isPresent()){
+        if (permissionOptional.isPresent()) {
             Permission permission = permissionOptional.get();
             permission.setName(request.getName());
             permission.setDescription(request.getDescription());
             permission.setUpdateDate(new Timestamp(System.currentTimeMillis()));
             return modelMapper.map(permissionRepository.saveAndFlush(permission), PermissionDTO.class);
         }
-        throw new RuntimeException("Có lỗi xảy ra trong quá trình cập nhật quyền!");
+        throw new MyCustomException("Có lỗi xảy ra trong quá trình cập nhật quyền!");
     }
 
     @Override
     @Transactional
     public PermissionDTO deleteByIdPermission(String id) {
-        if(!permissionRepository.existsById(id)){
-            throw new RuntimeException("Quyền có id: "+ id + "cần xóa không tồn tại trong hệ thống!");
+        if (!permissionRepository.existsById(id)) {
+            throw new MyCustomException("Quyền có id: " + id + "cần xóa không tồn tại trong hệ thống!");
         }
         Optional<Permission> permissionOptional = permissionRepository.findById(id);
-        if(permissionOptional.isPresent()){
+        if (permissionOptional.isPresent()) {
             permissionRepository.deleteById(id);
             return modelMapper.map(permissionOptional, PermissionDTO.class);
         }
-        throw new RuntimeException("Có lỗi xảy ra trong quá trinh xóa!");
+        throw new MyCustomException("Có lỗi xảy ra trong quá trinh xóa!");
     }
 
     @Override
     public List<PermissionDTO> deleteAllIdPermission(List<String> ids) {
         List<PermissionDTO> permissionDTOS = new ArrayList<>();
-        for(String id : ids){
+        for (String id : ids) {
             Optional<Permission> permissionOptional = permissionRepository.findById(id);
-            if(permissionOptional.isPresent()){
+            if (permissionOptional.isPresent()) {
                 Permission permission = permissionOptional.get();
                 permissionDTOS.add(modelMapper.map(permission, PermissionDTO.class));
                 permissionRepository.delete(permission);
-            }else {
-                throw new RuntimeException("Có lỗi xảy ra trong quá trình xóa!");
+            } else {
+                throw new MyCustomException("Có lỗi xảy ra trong quá trình xóa!");
             }
         }
         return permissionDTOS;
